# coinML

./: Dockerfile  LICENSE  README.md  pyproject.toml
src/data_collection/: api.py
src/forecast/: lightgbm.py
tests/data_collection/: test_api.py
tests/forecast/: test_lightgbm.py
