[tool.poetry]
name = "coinml"
version = "0.1.0"
description = "An exploratory repo for cryptocurrencies."
authors = ["Goktug T. Cinar"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.2"
requests = "^2.25.1"
lightgbm = "^3.2.0"
tsfresh = "^0.18.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
